# $Id$

2008-06-25
	* new variables smapi_bat_temp and smapi_bat_power
	* improved docs for freq_dyn* variables

2008-06-21
	* Replaced the global text_object array and count with a
	text_object_list
	* Renamed various vars
	* Removed redundancy in various parts

2008-06-20
	* Use output_methods instead of out_to_console
	* Made some functions non-inline to compile with gcc 4.2 and higher

2008-06-19
	* Fixed compilation issues with --enable-testing
	* Refactored format_seconds and format_seconds_short
	* Changed addr to print "No Address" when there is no address
	* Removed redundancy in various parts
	* Split help output into a separate function

2008-06-17
	* Made defines of magic numbers

2008-06-16
	* Moved audacious defs into header
	* Fixed 3 bufferoverflows in a struct utmp in users.c

2008-06-09
	* Graphs can now be logarithmic (except execigraph)

2008-06-08
	* Bugfix, $memgraph wasn't working and needed docs
	* Code for $lines and $words
	* Bugfix, $execgraph showed 0-0 instead of 0-100 values

2008-06-07
	* Case-insensitive values for if_up_strictness 
	* Fix bug where DEV_NAME can read uninitialised memory
	* Fix bug where ${if_mounted /}foo$endif prints foo on 1 line for
	each update instead of just 1 line

2008-06-06
	* Code for $scroll
	* Code for $memfree and $memeasyfree

2008-06-05
	* Fix bug where conky prints everything twice to STDOUT when
	out_to_console is enabled
	* Code for show_graph_range
	* Code for $monitor and $monitor_number

2008-06-04
	* Fix bug where conky tries to free a already freed pointer when you
	use gw_iface with a empty routingtable in linux
	* Fix bug where conky tries to tries to display deleted chars in a
	string (chars followed by a backspace-char) causing strange output.

2008-06-03
	* Added NVIDIA Graficcard support patch (thanks meissna)
	* Added --quiet patch (thanks sceptik)

2008-05-30
	* Simplified docs for color0-9 config settings and variables.
	* Improved $if_up for configurable behaviour.

2008-04-29