@@ -2,8 +2,8 @@ dnl $Id$
 
 dnl major, minor and micro version macros.
 m4_define([conky_version_major], [1])
-m4_define([conky_version_minor], [5])
-m4_define([conky_version_micro], [2])
+m4_define([conky_version_minor], [6])
+m4_define([conky_version_micro], [0])
 m4_define([conky_version_tag], [pre]) dnl [] for releases
 m4_define([conky_version_revision],[_pre@REVISION@])
 m4_define([conky_version],
