@@ -1,5 +1,8 @@
 # $Id$
 
+2008-06-28
+	* Added sysfs AC adapter support patch (thanks Byron)
+
 2008-06-25
 	* new variables smapi_bat_temp and smapi_bat_power
 	* improved docs for freq_dyn* variables
